Modify HTML, CSS and README.md file

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section class="container1">
       <h2>Main Program</h2>
       <hr class="line1" />
-      <div>
+      <div class="cardsc">
         <div class="mainPragramCardsContainer">
           <div class="mainProgramCard">
             <div>
@@ -159,16 +159,14 @@
         <hr class="line2" />
       </div>
       <div class="partnersList">
-        <span class="doublegdp">UNDP</span>
-        <span class="nkwashi">ZICTA</span>
-        <span class="microverse">PACRA</span>
-        <span class="gitlab">NTBC</span>
-        <span class="google">UNPFA</span>
-        <span class="microsoft">UNICEF</span>
-      </div>
+        <span class="doublegdp"><img src="/images/unicef.png" alt="UNICEF"></span>
+        <span class="doublegdp"><img src="./images/undp.png" alt="UNDP"></span>
+        <span class="doublegdp"><img src="./images/airtel.png" alt="NIKE"></span>
+        <span class="doublegdp"><img src="./images/zicta.png" alt="META"></span>
+        </div>
     </section>
     <footer class="footer">
-      <div>
+      <div class="">
         <img src="logo.png" alt="eventlogo" class="footerlogo" />
       </div>
       <div>
